--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </head>
 <body>
     <main>
-        <section class="agent-selection"></section>
-        <section class="agent"><img src="https://media.valorant-api.com/agents/e370fa57-4757-3604-3648-499e1f642d3f/fullportrait.png" alt="Arte Gekko"></section>
-        <section class="agent-info">
+        <section id="agent-selection"></section>
+        <section id="agent"><div></div></section>
+        <section id="agent-info">
             <h2>Iniciador</h2>
             <h1>Gekko</h1>
             <div class="abilities">
