--- a/index.html
+++ b/index.html
@@ -6,15 +6,25 @@
     <title>Tela de agentes</title>
 
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="media.css" media="screen and (max-width: 768px)">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    
     <script src="./script.js" defer></script>
 </head>
 <body>
+    
     <main>
+        <span class="material-symbols-outlined" id="openbtn" onclick="toggleNavbar()">
+            menu
+        </span>
+        <span class="material-symbols-outlined" id="closebtn" onclick="toggleNavbar()">
+            close
+        </span>
         <section id="agent-selection"></section>
         <section id="agent"><div></div></section>
         <section id="agent-info">
