Evento de toggle na navbar

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de agentes</title>
 
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="media.css" media="screen and (max-width: 768px)">
+    <link rel="stylesheet" href="./style.css" media="screen and (max-width: 1920px)">
+    <link rel="stylesheet" href="./media.css" media="screen and (max-width: 768px)">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,9 +21,6 @@
     <main>
         <span class="material-symbols-outlined" id="openbtn" onclick="toggleNavbar()">
             menu
-        </span>
-        <span class="material-symbols-outlined" id="closebtn" onclick="toggleNavbar()">
-            close
         </span>
         <section id="agent-selection"></section>
         <section id="agent"><div></div></section>
