--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de agentes</title>
 
-    <link rel="stylesheet" href="./style.css" media="screen and (max-width: 1920px)">
-    <link rel="stylesheet" href="./media.css" media="screen and (max-width: 768px)">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     
@@ -19,9 +14,6 @@
 <body>
     
     <main>
-        <span class="material-symbols-outlined" id="openbtn" onclick="toggleNavbar()">
-            menu
-        </span>
         <section id="agent-selection"></section>
         <section id="agent"><div></div></section>
         <section id="agent-info">
